--- a/index.html
+++ b/index.html
@@ -263,6 +263,42 @@
         </div>
     </div>
   </section>
+  <section>
+    <div class="container overflow-hidden py-5">
+      <div class="row row-cols-2 row-cols-sm-3 row-cols-xxl-6 g-3">
+        <div class="col ">
+          <div class="card-game active">
+            <img class="img-fluid" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+          </div>
+        </div>
+        <div class="col">
+          <div class="card-game ">
+            <img class="img-fluid" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+          </div>
+        </div>
+        <div class="col">
+          <div class="card-game">
+            <img class="img-fluid" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+          </div>
+        </div>
+        <div class="col">
+          <div class="card-game">
+            <img class="img-fluid" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+          </div>
+        </div>
+        <div class="col">
+          <div class="card-game">
+            <img class="img-fluid" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+          </div>
+        </div>
+        <div class="col">
+          <div class="card-game">
+            <img class="img-fluid" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </main>  
 </body>
 </html>
