--- a/index.html
+++ b/index.html
@@ -299,6 +299,13 @@
       </div>
     </div>
   </section>
+  <section>
+    <div class="container text-center">
+      <h6 class="text-blue">PLAY HAS NO LIMITS</h6>
+      <h1>Ecco la PlayStation 5</h1>
+      <p class="pt-3">Tuffati in nuove possibilità di gioco completamente inaspettate</p>
+    </div>
+  </section>
 </main>  
 </body>
 </html>
