--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
         </div>
         <div class="col">
           <div class="card-game ">
-            <img class="img-fluid" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+            <img class="img-fluid" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
           </div>
         </div>
         <div class="col">
@@ -283,7 +283,7 @@
         </div>
         <div class="col">
           <div class="card-game">
-            <img class="img-fluid" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+            <img class="img-fluid" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
           </div>
         </div>
         <div class="col">
@@ -293,7 +293,7 @@
         </div>
         <div class="col">
           <div class="card-game">
-            <img class="img-fluid" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+            <img class="img-fluid" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
           </div>
         </div>
       </div>
@@ -303,8 +303,25 @@
     <div class="container text-center">
       <h6 class="text-blue">PLAY HAS NO LIMITS</h6>
       <h1>Ecco la PlayStation 5</h1>
-      <p class="pt-3">Tuffati in nuove possibilità di gioco completamente inaspettate</p>
+      <p class="pt-3 fs-5">Tuffati in nuove possibilità di gioco completamente inaspettate</p>
     </div>
+  </section>
+  <section>
+    <div class="container">
+      <div class="row row-cols-1">
+        <div class="col-12 col-md-5 text-pad">
+          <h1 class="pt-sm-5 pt-md-0">Console PlayStation 5</h1>
+          <p class="py-3 fs-5">Sperimenta la nuova generazione di incredibili giochi PlayStation.</p>
+          <div class="btn btn-primary btn-bord3 rounded-pill ">Maggiori informazioni</div>
+        </div>
+        <div class="col-12 col-md-7 overflow-hidden">
+          <img class="img-fluid" src="img/playstation-5-thumb.png" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
+  <section>
+    
   </section>
 </main>  
 </body>
