--- a/index.html
+++ b/index.html
@@ -321,6 +321,42 @@
     </div>
   </section>
   <section>
+    <div class="container">
+      <div class="row row-cols-3 row-cols-md-5 g-5">
+        <div class="col play-border">
+          <div class="text-center">
+             <img class="img-fluid" src="img/playstation-5-thumb.png" alt="">
+             <span class="fs-5">Console PS5</span>
+          </div>
+        </div> 
+        <div class="col play-border2"> 
+          <div class="text-center">
+             <img class="img-fluid" src="img/joypad-thumb.png" alt="">
+             <span class="fs-5">Controller wireless DualSense™</span>
+          </div>
+        </div> 
+        <div class="col play-border2">   
+          <div class="text-center">
+            <img class="img-fluid" src="img/headset-thumb.png" alt="">
+            <span class="fs-5">Cuffie wirless con microfono PULSE 3<span class="TM">™</span></span>
+          </div>
+        </div> 
+        <div class="col play-border2">   
+          <div class="text-center">
+            <img class="img-fluid" src="img/remote-thumb.png" alt="">
+            <span class="fs-5">Telecomando Media</span>
+          </div>
+        </div> 
+        <div class="col play-border2">  
+          <div class="text-center">
+            <img class="img-fluid" src="img/camera-thumb.jpg" alt="">
+            <span class="fs-5">Telecamera HD</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section>
     
   </section>
 </main>  
