--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 </header> 
 <main>
   <section class="bg-hero text-white">
-    <div class="container">
+    <div class="container-fluid px-5">
         <div class="col-12 col-xxl-4">
           <img class="w-50 py-4" src="img/returnal-hero-banner-logo.png" alt="">
           <h1>Rompi il cervello</h1>
@@ -264,7 +264,7 @@
     </div>
   </section>
   <section>
-    <div class="container overflow-hidden py-5">
+    <div class="container-fluid px-5 overflow-hidden py-5">
       <div class="row row-cols-2 row-cols-sm-3 row-cols-xxl-6 g-3">
         <div class="col ">
           <div class="card-game active">
@@ -300,14 +300,14 @@
     </div>
   </section>
   <section>
-    <div class="container text-center">
+    <div class="container-fluid px-5 text-center">
       <h6 class="text-blue">PLAY HAS NO LIMITS</h6>
       <h1>Ecco la PlayStation 5</h1>
       <p class="pt-3 fs-5">Tuffati in nuove possibilità di gioco completamente inaspettate</p>
     </div>
   </section>
   <section>
-    <div class="container">
+    <div class="container-fluid px-5">
       <div class="row row-cols-1">
         <div class="col-12 col-md-5 text-pad">
           <h1 class="pt-sm-5 pt-md-0">Console PlayStation 5</h1>
@@ -321,7 +321,7 @@
     </div>
   </section>
   <section>
-    <div class="container">
+    <div class="container-fluid px-5 mb-5">
       <div class="row row-cols-3 row-cols-md-5 g-5">
         <div class="col play-border">
           <div class="text-center">
@@ -356,8 +356,18 @@
       </div>
     </div>
   </section>
-  <section>
-    
+  <section class="takes-two text-white">
+    <div class="container-fluid px-5">
+      <div class="col-12 col-xxl-3 py-2">
+        <img class="w-50 pb-4" src="img/it-takes-two-logo.png" alt="">
+        <h1>Un'avventura cooperativa selvaggia ti attende</h1>
+        <p class="pt-4 pb-1">Trova un amico e partite insieme per l'avventura più folle delle
+                             vostre vite in It Takes Two, un gioco d'avventura cooperativa a 
+                             piattaforme che stravolge il suo genere.
+        </p>
+        <div class="btn btn-danger btn-bord2 rounded-pill ">Acquista ora</div>
+      </div>
+  </div>
   </section>
 </main>  
 </body>
