--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
     </div>
   </section>
   <section class="takes-two text-white">
-    <div class="container-fluid px-5">
+    <div class="container-fluid px-5 pb-4">
       <div class="col-12 col-xxl-3 py-2">
         <img class="w-50 pb-4" src="img/it-takes-two-logo.png" alt="">
         <h1>Un'avventura cooperativa selvaggia ti attende</h1>
@@ -365,9 +365,68 @@
                              vostre vite in It Takes Two, un gioco d'avventura cooperativa a 
                              piattaforme che stravolge il suo genere.
         </p>
-        <div class="btn btn-danger btn-bord2 rounded-pill ">Acquista ora</div>
+        <div class="btn btn-danger btn-bord2 rounded-pill">Acquista ora</div>
       </div>
   </div>
+  </section>
+  <section class="bg-dark text-white">
+    <div class="container-fluid px-5">
+      <h2 class="py-3">Nuove uscite</h2>
+      <h6 class="sf-5 pb-2 text-br ">Giochi incredibili per PS4 e PS5 disponibili ora</h6>
+      <div class="row row-cols-2 row-cols-sm-3 row-cols-xxl-6 g-4">
+        <div class="col">
+          <img class="img-fluid rounded-4" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="#!">
+          <p class="text-font">Tony Hawk's™ Pro Skater™ 1 + 2</p>
+        </div>
+        <div class="col">
+          <img class="img-fluid rounded-4" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="#!">
+          <p class="text-font">Crash Bandicoot 4: It's About Time</p>
+        </div>
+        <div class="col">
+          <img class="img-fluid rounded-4" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="#!">
+          <p class="text-font">Tony Hawk's™ Pro Skater™ 1 + 2</p>
+        </div>
+        <div class="col">
+          <img class="img-fluid rounded-4" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="#!">
+          <p class="text-font">Crash Bandicoot 4: It's About Time</p>
+        </div>
+        <div class="col">
+          <img class="img-fluid rounded-4" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="#!">
+          <p class="text-font">Tony Hawk's™ Pro Skater™ 1 + 2</p>
+        </div>
+        <div class="col">
+          <img class="img-fluid rounded-4" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="#!">
+          <p class="text-font">Crash Bandicoot 4: It's About Time</p>
+        </div>
+        <div class="col">
+          <img class="img-fluid rounded-4" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="#!">
+          <p class="text-font">Tony Hawk's™ Pro Skater™ 1 + 2</p>
+        </div>
+        <div class="col">
+          <img class="img-fluid rounded-4" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="#!">
+          <p class="text-font">Crash Bandicoot 4: It's About Time</p>
+        </div>
+        <div class="col">
+          <img class="img-fluid rounded-4" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="#!">
+          <p class="text-font">Tony Hawk's™ Pro Skater™ 1 + 2</p>
+        </div>
+        <div class="col">
+          <img class="img-fluid rounded-4" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="#!">
+          <p class="text-font">Crash Bandicoot 4: It's About Time</p>
+        </div>
+        <div class="col">
+          <img class="img-fluid rounded-4" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="#!">
+          <p class="text-font">Tony Hawk's™ Pro Skater™ 1 + 2</p>
+        </div>
+        <div class="col">
+          <img class="img-fluid rounded-4" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="#!">
+          <p class="text-font">Crash Bandicoot 4: It's About Time</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section>
+    
   </section>
 </main>  
 </body>
