--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
       </div>
   </div>
   </section>
-  <section class="bg-dark text-white">
+  <section class="bg-dark text-white py-5">
     <div class="container-fluid px-5">
       <h2 class="py-3">Nuove uscite</h2>
       <h6 class="sf-5 pb-2 text-br ">Giochi incredibili per PS4 e PS5 disponibili ora</h6>
@@ -426,7 +426,32 @@
     </div>
   </section>
   <section>
-    
+    <div class="container-fluid px-5 py-5">
+      <h1 class="text-center ">Esplora PlayStation® 4</h1>
+      <p class="text-center fs-5 py-4">Giochi incredibili e intrattenmento senza fine. <br> Non c'è mai stato un
+                                       momento migliore per giocare sulla tua PS4.
+      </p>
+      <div class="row row-cols-1 row-cols-md-3">
+        <div class="col">
+          <img class="img-fluid col-11" src="img/ps4-slim-homepage-image-block.jpg" alt="">
+          <h1 class="pe-md-4">PlayStation 4</h1>
+          <p class="text-br2">Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione.</p>
+          <div class="btn btn-primary btn-bord3 rounded-pill mb-3">Scopri di più</div>
+        </div>
+        <div class="col">
+          <img class="img-fluid col-11" src="img/double11-202010-tw-psvr.jpg" alt="">
+          <h1>PlayStation VR</h1>
+          <p class="pe-md-4 pe-xxl-5 text-br2">Oltre 500 titoli ed esperienze di gioco. Scopri tutti.</p>
+          <div class="btn btn-primary btn-bord3 rounded-pill mb-3">Scopri di più</div>
+        </div>
+        <div class="col">
+          <img class="img-fluid col-11" src="img/dualshock-4-listing-thumb.jpg" alt="">
+          <h1>Accessori</h1>
+          <p class="pe-5 pt-md-3 pt-xxl-0 text-br2 me-xxl-1">Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.</p>
+          <div class="btn btn-primary btn-bord3 rounded-pill mb-3">Scopri di più</div>
+        </div>
+      </div>
+    </div>
   </section>
 </main>  
 </body>
