--- a/index.html
+++ b/index.html
@@ -453,6 +453,23 @@
       </div>
     </div>
   </section>
+  <section>
+    <div class="container-fluid px-5 back-lightgray">
+      <div class="row row-cols-1 py-5 py-md-0">
+        <div class="col-12 col-md-6 text-pad2">
+          <img class="w-75 pb-3 py-md-3 " src="img/ps-plus-logo.png" alt="">
+          <p class="py-xxl-4 ">Migliora la tua esperienza PlayStation con l'accesso 
+                                       a multigiocatore online, giochi mensili, sconti 
+                                       esclusivi e altro ancora.
+          </p>
+          <div class="btn btn-color btn-bord3 rounded-pill py-md-2 fs-xxl-5">Esplora PlayStation Plus</div>
+        </div>
+        <div class="img-plus col-md-6 overflow-hidden">
+          <img class="img-fluid" src="img/ps-plus-april-monthly-games-featured-image-block.png" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
 </main>  
 </body>
 </html>
