--- a/index.html
+++ b/index.html
@@ -470,6 +470,17 @@
       </div>
     </div>
   </section>
+  <section>
+    <div class="container-fluid px-5 text-center py-5">
+      <h1>Nuovi sconti sul PlayStation Store</h1>
+      <p class="pt-3 fs-5 pb-5 text-gray">Sconti pazzeschi, collezioni curate e saldi stagionali su PS5, PS4 e PS VR, tutti in un unico posto.</p>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col"><img class="img-fluid" src="img/playstation-store-games-under-20-spotlight.jpg" alt="#!"></div>
+        <div class="col"><img class="img-fluid" src="img/playstation-store-golden-week-sale-spotlight.jpg" alt="#!"></div>
+        <div class="col"><img class="img-fluid" src="img/playstation-store-free-to-play-spotlight.png" alt="#!"></div>
+      </div>
+    </div>
+  </section>
 </main>  
 </body>
 </html>
