--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
                                        a multigiocatore online, giochi mensili, sconti 
                                        esclusivi e altro ancora.
           </p>
-          <div class="btn btn-color btn-bord3 rounded-pill py-md-2 fs-xxl-5">Esplora PlayStation Plus</div>
+          <div class="btn btn-color btn-bord4 rounded-pill py-md-2 fs-xxl-5">Esplora PlayStation Plus</div>
         </div>
         <div class="img-plus col-md-6 overflow-hidden">
           <img class="img-fluid" src="img/ps-plus-april-monthly-games-featured-image-block.png" alt="">
@@ -478,6 +478,40 @@
         <div class="col"><img class="img-fluid" src="img/playstation-store-games-under-20-spotlight.jpg" alt="#!"></div>
         <div class="col"><img class="img-fluid" src="img/playstation-store-golden-week-sale-spotlight.jpg" alt="#!"></div>
         <div class="col"><img class="img-fluid" src="img/playstation-store-free-to-play-spotlight.png" alt="#!"></div>
+      </div>
+    </div>
+  </section>
+  <section>
+    <div class="container-fluid px-5 back-blue">
+      <div class="row row-cols-1 py-5 py-md-0">
+        <div class="col-12 col-md-6 text-pad3">
+          <img class="w-75 pb-3 py-md-3 " src="img/ps-now-logo-two-column.png" alt="">
+          <p class="py-xxl-4 text-white">Ottieni l'accesso immediato a una vastissima raccolta
+                               di oltre 800 giochi per PS4, PS3 e PS2 su PS4 o PC 
+                               Windows, con nuovi titoli aggiunti ogni mese.
+          </p>
+          <div class="btn btn-light btn-bord5 rounded-pill py-md-2 fs-xxl-5">Esplora PlayStation Now</div>
+        </div>
+        <div class="img-plus col-md-6 overflow-hidden">
+          <img class="img-fluid" src="img/ps-now-april-featured-image-block.png" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
+  <section>
+    <div class="container-fluid px-5 back-blue">
+      <div class="row row-cols-1 py-5 py-md-0">
+        <div class="col-12 col-md-6 text-pad3">
+          <img class="w-75 pb-3 py-md-3 " src="img/ps-now-logo-two-column.png" alt="">
+          <p class="py-xxl-4 text-white">Ottieni l'accesso immediato a una vastissima raccolta
+                               di oltre 800 giochi per PS4, PS3 e PS2 su PS4 o PC 
+                               Windows, con nuovi titoli aggiunti ogni mese.
+          </p>
+          <div class="btn btn-light btn-bord5 rounded-pill py-md-2 fs-xxl-5">Esplora PlayStation Now</div>
+        </div>
+        <div class="img-plus col-md-6 overflow-hidden">
+          <img class="img-fluid" src="img/ps-now-april-featured-image-block.png" alt="">
+        </div>
       </div>
     </div>
   </section>
