--- a/index.html
+++ b/index.html
@@ -499,18 +499,20 @@
     </div>
   </section>
   <section>
-    <div class="container-fluid px-5 back-blue">
-      <div class="row row-cols-1 py-5 py-md-0">
-        <div class="col-12 col-md-6 text-pad3">
-          <img class="w-75 pb-3 py-md-3 " src="img/ps-now-logo-two-column.png" alt="">
-          <p class="py-xxl-4 text-white">Ottieni l'accesso immediato a una vastissima raccolta
-                               di oltre 800 giochi per PS4, PS3 e PS2 su PS4 o PC 
-                               Windows, con nuovi titoli aggiunti ogni mese.
-          </p>
-          <div class="btn btn-light btn-bord5 rounded-pill py-md-2 fs-xxl-5">Esplora PlayStation Now</div>
+    <div class="container-fluid px-5 my-5">
+      <h1 class="text-center">Seguici sui social media</h1>
+      <div class="row row-cols-2  row-cols-sm-4 my-5 mx-md-3 mx-xxl-0 ">
+        <div class="col col-xxl-2 offset-xxl-2 mb-5">
+          <img class="img-fluid" src="img/twitter.jpg" alt="">
         </div>
-        <div class="img-plus col-md-6 overflow-hidden">
-          <img class="img-fluid" src="img/ps-now-april-featured-image-block.png" alt="">
+        <div class="col col-xxl-2 mb-5">
+          <img class="img-fluid" src="img/facebook.jpg" alt="">
+        </div>
+        <div class="col col-xxl-2">
+          <img class="img-fluid" src="img/instagram.jpg" alt="">
+        </div>
+        <div class="col col-xxl-2">
+          <img class="img-fluid" src="img/youtube.png" alt="">
         </div>
       </div>
     </div>
