--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 <!-- nav parte destra -->
             <ul class="navbar-nav mb-2 mb-lg-0">
               <li class="nav-item dropdown">
-                <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link offset-5 offset-xxl-0" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                  My PlayStation <i class="bi bi-chevron-down"></i><i class="bi bi-chevron-up"></i>
                 </a>
                 <ul class="dropdown-menu">
@@ -243,8 +243,8 @@
                 </ul>
               </li>
             </ul>
-            <div class="btn btn-secondary btn-bord rounded-pill bg-dark ">Accedi</div>
-            <a href="#!"><i class="bi bi-search fs-4 p-2 "></i></a>
+            <div class="btn btn-secondary btn-bord rounded-pill bg-dark offset-5 offset-xxl-0">Accedi</div>
+            <a href="#!"><i class="bi bi-search fs-4 p-2 d-block offset-5 offset-xxl-0"></i></a>
         </div>
       </div>
     </nav>
@@ -517,6 +517,47 @@
       </div>
     </div>
   </section>
-</main>  
+</main> 
+<footer class="back-blue2">
+  <div class="container-fluid px-5 py-5 text-white">
+    <div class="row row-cols-1 row-cols-xxl-2 ">
+      <div class="col col-xxl-6">
+        <img class="img-form pt-3" src="img/ps-footer.svg" alt="#!">
+        <div class="mt-4"><i class="fa-solid fa-globe"></i><span class="ps-2"> Country / Region: Italy </span></div>
+      </div>
+      <div class="col col-xxl-6 d-flex py-5 py-md-4 justify-content-md-between justify-content-xxl-around flex-footer">
+        <ul class="list-style">
+          <li>Link footer n</li>
+          <li>Link footer n</li>
+          <li>Link footer n</li>
+          <li>Link footer n</li>
+          <li>Link footer n</li>
+        </ul>
+        <ul class="list-style">
+          <li>Link footer n</li>
+          <li>Link footer n</li>
+          <li>Link footer n</li>
+          <li>Link footer n</li>
+          <li>Link footer n</li>
+          <li>Link footer n</li>
+          <li>Link footer n</li>
+        </ul>
+        <ul class="list-style">
+          <li>Link footer n</li>
+          <li>Link footer n</li>
+          <li>Link footer n</li>
+        </ul>
+      </div>
+      <div class="col col-xxl-7">
+        <img class="img-form1" src="img/sie-logo.svg" alt="#!">
+        <p class="font-footer">Website ©2022 Sony Interactive Entertainment Europe Limited.
+           Tutti i contenuti, nomi dei giochi, nomi commerciali e/o di abbigliamento,
+           marchi registrati, grafica e immagini associati sono marchi registrati e/o
+           materiale protetto da copyright dei rispettivi proprietari. Tutti i diritti
+           riservati. <a class="text-white" href="#!">Maggiori info</a></p>
+      </div>
+    </div>
+  </div>
+</footer> 
 </body>
 </html>
